2013-01-26  Harry Metske <metskem@apache.org>

       * 2.9.1-svn-20
       
       * JSPWIKI-758 - deprecate RCS support.
       
2013-01-24 Glen Mazza

       Minor tweak to testSerialization() in AclImplTest so it will work with both Maven and Ant 
       running the test. 

2013-01-22 Glen Mazza

       Fix for JSPWiki-396 (updated org/apache/wiki/util/UtilJ2eeCompat.java to
       use streaming instead of char array-based output to WebLogic.

2013-01-20  Dirk Frederickx (brushed AT apache DOT org)

       * 2.9.1-svn-19
       
       * JSPWIKI-712, fixing entities encoding in change-note, author and link fields. 

2013-01-15  Harry Metske <metskem@apache.org>

       * 2.9.1-svn-18
       
       * fixed JSPWIKI-712  Entities in ChangeNote should be decoded when "keep editing"

2013-01-14  Harry Metske <metskem@apache.org>

       * 2.9.1-svn-17
       
       * fixed JSPWIKI-659  NotSerializableException on Tomcat restart , UserManager not Serializable
          We now no longer put JSONRPCBridge in the HttpSession. 
          Long term solution is to migrate to jackson. 

2013-01-12 Glen Mazza (gmazza@apache.org)

       * Switched to a hardcoded jdbc.properties file for testing to simplify build.xml and future
         Maven conversion. Updated the developing pom.xml in JSPWIKI-651.

2013-01-10  Juan Pablo Santos (juanpablo AT apache DOT org)

       * 2.9.1-svn-16
         
       * some additional changes regarding org.apache.wiki.api.engine.PluginManager (cfr. $SVN/trunk/doc/2.10-API.txt):  
         -> @Deprecated public void executeParse(PluginContent content, WikiContext context)
              + consider using PluginContent.executeParse(WikiContext) instead
         -> WikiPlugin newWikiPlugin( String pluginName, ResourceBundle rb ) is now public and part 
            of the org.apache.wiki.api.engine.PluginManager API
       
2013-01-09  Juan Pablo Santos (juanpablo AT apache DOT org)

       * 2.9.1-svn-15
       